--- a/07-async-js/index.html
+++ b/07-async-js/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>Async JS</h1>
-    <!-- <button id="start">Start</button>
-    <button id="stop">Stop</button> -->
+    <button id="start">Start</button>
+    <button id="stop">Stop</button>
 
-    <script src="demo.js"></script>
+    <script src="02-bg-change-color.js"></script>
   </body>
 </html>
