--- a/advanced-js/index.html
+++ b/advanced-js/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Advanced JS</h1>
-    <!-- <input type="text" onchange="betterFunction()" /> -->
-    <script src="05-memorization.js"></script>
+    <!-- <input type="text" id="search" /> -->
+    <button id="btn">Click</button>
+    <script src="07-throtling.js"></script>
   </body>
 </html>
