--- a/programs/index.html
+++ b/programs/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Programs</h1>
-    <script src="reverse-number.js"></script>
+    <script src="02-reverse-number.js"></script>
   </body>
 </html>
