--- a/advanced-js/index.html
+++ b/advanced-js/index.html
@@ -9,6 +9,6 @@
     <h1>Advanced JS</h1>
     <!-- <input type="text" id="search" /> -->
     <button id="btn">Click</button>
-    <script src="07-throtling.js"></script>
+    <script src="08-promiseAll.js"></script>
   </body>
 </html>
